Fix: Apply top-left alignment only to landscape cover images in 1-col project layout

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -678,10 +678,9 @@
         padding-left: 6px !important;
         padding-right: 6px !important;
     }
-}
-
 /* Fix for horizontal cover images in 1-column project page */
-.left-column-progetto > a > img {
+.left-column-progetto.is-landscape > a > img {
     object-position: top left;
     width: 100%;
+}   min-width:100%;
 }
